--- a/app/src/main/res/layout/activity_steps_list.xml
+++ b/app/src/main/res/layout/activity_steps_list.xml
@@ -10,7 +10,7 @@
         android:id="@+id/steps_list_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="@dimen/margin_bottom_step_list"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
