--- a/app/src/main/res/layout/detailed_step_fragment.xml
+++ b/app/src/main/res/layout/detailed_step_fragment.xml
@@ -8,14 +8,14 @@
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:background="#000" />
+        android:layout_height="@dimen/video_height"
+        android:background="@color/black" />
 
     <TextView
         android:id="@+id/short_description"
         android:layout_width="wrap_content"
-        android:layout_height="42dp"
-        android:text="Description:"
+        android:layout_height="@dimen/short_disc_height"
+        android:text="@string/description"
         android:textSize="28sp"
         android:textStyle="bold" />
 
@@ -24,27 +24,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="TextView"
+        android:text="@string/step_description"
         android:textSize="18sp" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp">
+        android:layout_marginTop="@dimen/margin_top_layout">
 
         <Button
             android:id="@+id/back_button"
-            android:layout_width="60dp"
-            android:layout_height="64dp"
-            android:layout_marginLeft="5dp"
+            android:layout_width="@dimen/height_mar_det"
+            android:layout_height="@dimen/height_mar_det"
+            android:layout_marginLeft="@dimen/bottom_margin_left"
             android:background="@drawable/back_icon" />
 
         <Button
             android:id="@+id/next_button"
-            android:layout_width="60dp"
-            android:layout_height="64dp"
-            android:layout_marginLeft="250dp"
+            android:layout_width="@dimen/bottom_margin_det"
+            android:layout_height="@dimen/height_mar_det"
+            android:layout_marginLeft="@dimen/bottom_marg"
             android:background="@drawable/next_icon" />
 
 
