--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,13 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="margin_bottom_step_list">2dp</dimen>
+    <dimen name="bottom_margin_det">60dp</dimen>
+    <dimen name="height_mar_det">64dp</dimen>
+    <dimen name="short_disc_height">42dp</dimen>
+    <dimen name="margin_top_layout">124dp</dimen>
+    <dimen name="bottom_margin_left">5dp</dimen>
+    <dimen name="bottom_marg">250dp</dimen>
+    <dimen name="video_height">240dp</dimen>
 
 </resources>
