--- a/app/src/main/res/layout/detailed_step_fragment.xml
+++ b/app/src/main/res/layout/detailed_step_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -13,42 +13,49 @@
 
     <TextView
         android:id="@+id/short_description"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/short_disc_height"
+android:layout_below="@id/video_view"
         android:text="@string/description"
         android:textSize="28sp"
         android:textStyle="bold" />
 
     <TextView
+        android:layout_below="@id/short_description"
         android:id="@+id/step_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+
         android:text="@string/step_description"
         android:textSize="18sp" />
 
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top_layout">
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+     android:layout_alignParentBottom="true">
 
         <Button
+            android:layout_margin="5dp"
+            android:layout_alignParentLeft="true"
             android:id="@+id/back_button"
             android:layout_width="@dimen/height_mar_det"
             android:layout_height="@dimen/height_mar_det"
-            android:layout_marginLeft="@dimen/bottom_margin_left"
             android:background="@drawable/back_icon" />
 
         <Button
+            android:layout_alignParentRight="true"
+            android:layout_margin="5dp"
+
             android:id="@+id/next_button"
             android:layout_width="@dimen/bottom_margin_det"
             android:layout_height="@dimen/height_mar_det"
-            android:layout_marginLeft="@dimen/bottom_marg"
             android:background="@drawable/next_icon" />
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
