--- a/app/src/main/res/layout/recipe_rv_item.xml
+++ b/app/src/main/res/layout/recipe_rv_item.xml
@@ -25,7 +25,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="47dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -36,21 +36,20 @@
             android:id="@+id/food_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_marginTop="12dp"
             android:text="TextView"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
 
         <TextView
             android:id="@+id/people"
-            android:layout_width="109dp"
-            android:layout_height="29dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="180dp"
             android:text="TextView"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
